event_service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-deployment
  labels:
    app: event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: eventregistryhiran01.azurecr.io/event-service:latest
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /api/events
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/events
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 20
