event_service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-ticket-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/events
        pathType: Prefix
        backend:
          service:
            name: event-service
            port:
              number: 5002
      - path: /api/payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 5003
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /api/bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
